--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ theme:
 use_directory_urls: false
 markdown_extensions:
   - plantuml_markdown
-google_analytics: ['UA-163807440-1', 'jazemzer.github.io/kingdom-of-god']
+google_analytics: ['UA-163807440-3', 'jazemzer.github.io/kingdom']
 
 nav:
   - 'Primary': 'primary.md'
